--- a/check-coverage/action.yml
+++ b/check-coverage/action.yml
@@ -37,7 +37,7 @@ runs:
           coverage report --format=markdown --show-missing >> $GITHUB_STEP_SUMMARY
 
           # Report again and fail if under 100%.
-          coverage report --fail-under=100
+          coverage report --show-missing --fail-under=100
 
       - name: Upload HTML report if check failed.
         uses: actions/upload-artifact@v4
