Fix bug in coverage file name
This gave clashing filenames in matrix runs

--- a/run-tests/action.yml
+++ b/run-tests/action.yml
@@ -28,7 +28,7 @@ runs:
       - name: Run tests
         shell: bash
         run: |
-          export COVERAGE_FILE=.coverage.$GITHUB_JOB
+          export COVERAGE_FILE=.coverage.${{ steps.suffix.outputs.slug }}
           uv run ${{ inputs.uv-params }} -m pytest --cov
 
       - name: Upload coverage data
