--- a/check-coverage/action.yml
+++ b/check-coverage/action.yml
@@ -1,5 +1,10 @@
 name: 'Check Code Coverage'
 
+inputs:
+  project-directory:
+    description: 'Directory containing pyproject.toml (useful for monorepos)'
+    default: "."
+
 runs:
   using: composite
   steps:
@@ -13,11 +18,13 @@ runs:
         uses: actions/download-artifact@v4
         with:
           pattern: coverage-data-*
+          path: ${{ inputs.project-directory }}
           merge-multiple: true
 
       - name: Combine coverage and fail if it's <100%.
         shell: bash
         run: |
+          cd "${{ inputs.project-directory }}"
           uv tool install coverage
 
           coverage combine
@@ -33,5 +40,5 @@ runs:
         uses: actions/upload-artifact@v4
         with:
           name: html-report
-          path: htmlcov
+          path: ${{ inputs.project-directory }}/htmlcov
         if: ${{ failure() }}
