--- a/check-formatting/action.yml
+++ b/check-formatting/action.yml
@@ -1,5 +1,10 @@
 name: 'Check Code Formatting'
 
+inputs:
+  project-directory:
+    description: 'Directory containing pyproject.toml (useful for monorepos)'
+    default: "."
+
 runs:
   using: composite
   steps:
@@ -12,5 +17,6 @@ runs:
       - name: Check formatting is correct
         shell: bash
         run:  |
+          cd "${{ inputs.project-directory }}"
           uv tool install ruff
           ruff format --diff 
