--- a/run-tests/action.yml
+++ b/run-tests/action.yml
@@ -7,35 +7,26 @@ inputs:
   uv-params:
     description: 'Params for uv'
     default: "--all-extras --dev"
+  project-directory:
+    description: 'Directory containing pyproject.toml (useful for monorepos)'
+    default: "."
 
 runs:
   using: composite
   steps:
-      - uses: cjw296/slugify-action@v1
-        id: suffix
-        with:
-          value: ${{ inputs.uv-params }}
-
-      - uses: actions/checkout@v4
-
-      - name: Install uv and set the python version
-        uses: astral-sh/setup-uv@v5
+      - uses: ./uv-run/
+        id: uv-run
         with:
           python-version: ${{ inputs.python-version }}
-          cache-dependency-glob: "**/pyproject.toml"
-          cache-suffix: ${{ steps.suffix.outputs.slug }}
-
-      - name: Run tests
-        shell: bash
-        run: |
-          export COVERAGE_FILE=.coverage.${{ steps.suffix.outputs.slug }}
-          uv run ${{ inputs.uv-params }} -m pytest --cov
+          uv-params: ${{ inputs.uv-params }}
+          command: "-m pytest --cov"
+          uv-command: "export COVERAGE_FILE=.coverage.__PYTHON_VERSION__-__SLUG__ && uv run"
+          project-directory: ${{ inputs.project-directory }}
 
       - name: Upload coverage data
         uses: actions/upload-artifact@v4
         with:
-          name: coverage-data-${{ inputs.python-version }}-${{ steps.suffix.outputs.slug }}
-          path: .coverage.*
+          name: coverage-data-${{ inputs.python-version }}-${{ steps.uv-run.outputs.slug }}
+          path: ${{ inputs.project-directory }}/.coverage.*
           include-hidden-files: true
           if-no-files-found: ignore
-      - uses: actions/checkout@v4
