--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,14 +1,15 @@
 name: "Release"
 
 on:
-  push:
+  workflow_run:
+    workflows: [Continuous Integration]
+    types: [completed]
     branches: [main]
 
 jobs:
   release:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - uses: actions/setup-python@v4
         with:
